Update CLAUDE.md with correct build commands and JDK version
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>